<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/onSort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sorting"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tasksFragment_to_historyFragment"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tasksFragment_to_syncDialog"
        android:title="@string/syncing"
        app:showAsAction="never" />

    <item
        android:id="@+id/onChangeTheme"
        android:title="@string/change_theme"
        app:showAsAction="never" />

    <item
        android:id="@+id/onBuy"
        android:title="@string/buy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tasksFragment_to_aboutDialog"
        android:title="@string/about_app"
        app:showAsAction="never" />

</menu>